# cola-manipulation-bound

./: .gitignore  README.md  pyproject.toml
cola/: __init__.py  __main__.py  bound.py  constants.py  plots.py  simulate.py
docs/: index.html  process.html  trade-simulator.html
docs/css/: components.css  layout.css  trade-simulator.css  variables.css
docs/data/: nba-data.json  trade-metadata.json
docs/js/: app.js  charts.js  cola-engine.js  nav.js  process-app.js  trade-simulator-app.js  trade-simulator-charts.js
docs/sweep/: index.html  script.js  style.css
docs/sweep/data/: headline_summary.csv  stability.json  stability_report.md
paper/: capped-cola-memo-v2.tex  capped-cola-memo.tex  capped_cola_sweep_results.json  main.tex  references.bib
paper/sections/: 01-introduction.tex  02-background.tex  03-cola-family.tex  04-manipulation-bound.tex  05-backtesting.tex  06-comparison.tex  07-discussion.tex
scripts/: append_2026_season.js  audit_2026_projection.js  audit_countdown_mc.js  audit_data.js  audit_dial_taxonomy.js  audit_paper_numbers.js  capped_cola_sweep.js  collect_data.py  enrich_playin.js
scripts/basketball_gm_sweep/: ASSUMPTIONS.md  ASSUMPTIONS_FOR_HIGHLEY.md  DIAL_MAPPING.md  README.md  colaFullEngineDriver.test.ts  colaFullEngineSpike.test.ts  colaSimBenchmark.test.ts  colaSweepDriver.test.ts  dial_grid.json  objectives.js  run_sweep.sh  sweep.js
scripts/basketball_gm_sweep/figures/: CAPTIONS.md
web/css/: charts.css  variables.css
web/data/: nba-data.json
web/js/: app.js  cola-engine.js
(+15 files in other folders)
